# StateCraft

./: .gitignore  Dockerfile  README.md  blog_draft.md  llm_bridge.py  main.py  model_server.py  nginx.conf  openenv.yaml  pyproject.toml  requirements-api.txt  requirements.txt  start.sh  verify_integration.py
agents/: __init__.py  auditor.py  base_agent.py  central_bank.py  coalition.py  crisis_generator_agent.py  finance.py  health.py  llm_socket.py  military.py  negotiation.py  political.py  rl_shallow.py  roles.py
api/: __init__.py  schemas.py  server.py
auditor/: __init__.py  classifier.py  counterfactual.py
causal/: __init__.py  planner.py  score.py
config/: agents.yaml  config.yaml  rewards.yaml  tiers.yaml
core/: __init__.py  active_rewards.py  aggregation.py  credit_assignment.py  negotiation.py  rewards.py  step_logic.py  trust.py
defense/: __init__.py  reward_defender.py
docs/: COLAB_HF_SETUP.md
emergence/: __init__.py  detector.py
env/: __init__.py  crisis_env.py  disaster.py  dynamics.py  economic.py  pandemic.py  scenarios.py  state.py
eval/: __init__.py  generalization.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
logs/: __init__.py  event_logger.py  narrative.py
memory/: __init__.py  store.py
metrics/: __init__.py  evaluation.py  tracker.py
notebooks/: StateCraft_Colab_Train.ipynb  colab_pipeline.py  statecraft_train.ipynb  statecraft_train.txt  statecraft_train_anywhere_colab.ipynb
openenv/: __init__.py  grader.py  tasks.py  wrapper.py
rewards/: __init__.py  rewards.py
scripts/: train_cloud.py
(+35 files in other folders)
