[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-statecraft"
version = "0.1.0"
description = "StateCraft — multi-agent crisis governance environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "torch>=2.0.0",
    "trl>=0.7.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["api", "env", "core", "agents", "metrics", "logs", "rewards",
            "auditor", "causal", "defense", "emergence", "memory", "openenv"]
